# coding-interview-prep

./: .gitignore  README.rst
c/: CMakeLists.txt  build.bat  build.sh  run_tests.bat  run_tests.sh
c/include/pdcip/: helpers.h  link.h  tree.h  types.h
c/include/pdcip/structures/: tree.h
c/src/: CMakeLists.txt  link.c  tree.c
c/src/structures/: CMakeLists.txt  tree.c
c/test/: CMakeLists.txt  tree_test.c  tree_test.cc
cpp/: CMakeLists.txt  build.bat  build.sh  run_tests.bat  run_tests.sh
cpp/include/pdcip/cpp/: enums.h  graph.h  link.h  tree.h  types.h
cpp/include/pdcip/cpp/structures/: tree.h
cpp/include/pdcip/cpp/testing/: msvc.h
cpp/src/: CMakeLists.txt  graph.cc  link.cc  tree.cc
cpp/src/structures/: CMakeLists.txt  tree.cc
cpp/test/: CMakeLists.txt  graph_test.cc  link_test.cc  tree_test.cc
cpp/test/structures/: CMakeLists.txt  tree_test.cc
python/: setup.cfg
python/pdcip/: enums.py  graph.py  tree.py
python/pdcip/algorithms/: core.py  tree_search.py
python/pdcip/algorithms/search/: __init__.py  core.py  tree.py
python/pdcip/algorithms/search/tests/: test_tree.py
python/pdcip/algorithms/tests/: test_tree_search.py
python/pdcip/data_structures/: binary_tree.py  tree.py
python/pdcip/data_structures/tests/: test_binary_tree.py  test_tree.py
python/pdcip/structures/: graph.py  tree.py
python/pdcip/structures/tests/: test_tree.py
python/pdcip/tests/: test_graph.py  test_tree.py
tools/: cmake_build.bat  cmake_build.sh
tools/cmake/: BuildCppTests.cmake  SetCppDefaults.cmake  SetDefaultBuild.cmake
