cmake_minimum_required(VERSION 3.16)

project(
    pdcip-cpp
    VERSION 0.1.0
    DESCRIPTION "C++ interview code"
    HOMEPAGE_URL https://github.com/phetdam/coding-interview-prep/tree/master/cpp
    LANGUAGES CXX
)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# add_subdirectory(src)
# add_subdirectory(test)
