[metadata]
name = pdcip-py
version = 0.1.0
author = Derek Huang
author_email = djh458@stern.nyu.edu
description = Python 3 interview code
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/phetdam/coding-interview-prep
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
